--- a/css/kasper.css
+++ b/css/kasper.css
@@ -179,6 +179,7 @@ header nav .form i {
   transform: translateY(-50%);
   right: 0;
 }
+ 
 /* End Header */
 /* Start Landing */
 .landing {
@@ -260,6 +261,7 @@ header nav .form i {
   border-radius: 50%;
   margin-right: 10px;
 }
+ 
 .landing .bullets li.active {
   background-color: var(--main-color);
   border-color: var(--main-color);
@@ -830,6 +832,9 @@ header nav .form i {
   padding: 20px 20px 20px 60px;
   caret-color: var(--main-color);
   width: calc(100% - 130px);
+  border-radius: 7px 0 0 7px;
+   
+
 }
 .subscribe form input[type="submit"] {
   width: 130px;
@@ -858,6 +863,13 @@ header nav .form i {
 }
 /* End Subscribe */
 /* Start Contact */
+i{
+  transition: 0.5s;
+}
+i:hover{
+  margin-left: 10px;
+  color: var(--main-color);
+}
 .contact {
   padding-top: var(--section-padding);
   padding-bottom: var(--section-padding);
@@ -875,6 +887,8 @@ header nav .form i {
   flex-basis: 70%;
 }
 .contact .content form .main-input {
+  
+  border-radius: 7px;
   padding: 20px;
   display: block;
   border: 1px solid #ccc;
